# trino-python-client

./: pyproject.toml  setup.py  tox.ini
.github/workflows/: ci.yml
aiotrino/: auth.py  client.py  constants.py  dbapi.py  exceptions.py  transaction.py
integration_tests/: fixtures.py
tests/integration/: conftest.py  test_dbapi.py
tests/unit/: test_client.py  test_http.py
