[tool.poetry]
name = "aiotrino"
version = "0.2.0"
description = ""
authors = ["Dimosthenis Kaponis <dkaponis@metrika.co>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.8.1"
pytz = "^2021.3"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
flake8 = "^4.0.1"
autopep8 = "^1.6.0"
pytest-aiohttp = "^1.0.4"
aioresponses = "^0.7.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
